added check to meta and updated a few things